--- a/client/index.html
+++ b/client/index.html
@@ -10,41 +10,53 @@
   	</head>
   	<body>
 	  	<div class="container">
-	    	<form id="syncform" method="post" enctype="multipart/form-data">
-				<label>Book (epub)</label>
-	    		<input type="text" id="bookupload" class="uploadFile" placeholder="Choose File" disabled="disabled"/>
-			  	<div class="fileUpload btn">			  		
-				    <span>Upload</span>
-				    <input id="bookbtn" type="file" class="upload" name="bookfile"/>
+	    	<form id="syncform" class="form-horizontal" method="post" enctype="multipart/form-data">
+				<div class="form-group">
+					<label class="col-xs-1" for="bookupload">Book (epub)</label>
+					<div class="col-xs-3">
+		    			<input type="text" id="bookupload" class="uploadFile form-control" placeholder="Choose File" disabled="disabled"/>
+		    		</div>
+				  	<div class="fileUpload btn btn-default">			  		
+					    <span>Upload</span>
+					    <input id="bookbtn" type="file" class="upload" name="bookfile"/>
+					</div>
 				</div>
-				<label>Subtitles (srt)</label>
-	    		<input type="text" id="subtitleupload" class="uploadFile" placeholder="Choose File" disabled="disabled"/>
-			  	<div class="fileUpload btn">			  		
-				    <span>Upload</span>
-				    <input id="subtitlebtn" type="file" class="upload" name="subtitlefile" />
+				<div class="form-group">
+					<label class="col-xs-1" for="subtitleupload">Subtitles (srt)</label>
+					<div class="col-xs-3">
+		    			<input type="text" id="subtitleupload" class="uploadFile form-control" placeholder="Choose File" disabled="disabled"/>
+		    		</div>
+				  	<div class="fileUpload btn btn-default">			  		
+					    <span>Upload</span>
+					    <input id="subtitlebtn" type="file" class="upload" name="subtitlefile" />
+					</div>
 				</div>
-				<div class="submit">
+				<div class="col-xs-offset-1">
 					<button id="syncButton" type="submit" class="btn btn-primary">Synchronize</button>
 				</div>
 			</form>
 
 			<!-- Modal -->
-			<div id="progressModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			  	<div class="modal-header">
-			    	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			    	<h3>Synchronizing...</h3>
-			  	</div>
-			  	<div class="modal-body">
-					<div class="progress progress-striped active">
-		  				<div id="syncprogressbar" class="bar" ></div>
-					</div>
-			  	</div>
-			  	<div class="modal-footer">
-			    	<form action="/fetchresult" method="post">
-			    		<input id="childpid" name="childpid" type="hidden" value="" />
-			    		<button id="cancelbutton" class="btn" style="display: none" type="button">Cancel</button>
-			    		<button id="downloadbutton" style="display: none" type="submit" class="btn">Download</button>
-		    		</form>
+			<div id="progressModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+    				<div class="modal-content">
+					  	<div class="modal-header">
+					    	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					    	<h3>Synchronizing...</h3>
+					  	</div>
+					  	<div class="modal-body">
+							<div class="progress progress-striped active">
+				  				<div id="syncprogressbar" class="progress-bar" ></div>
+							</div>
+					  	</div>
+					  	<div class="modal-footer">
+					    	<form action="/fetchresult" method="post">
+					    		<input id="childpid" name="childpid" type="hidden" value="" />
+					    		<button id="cancelbutton" class="btn" style="display: none" type="button">Cancel</button>
+					    		<button id="downloadbutton" style="display: none" type="submit" class="btn">Download</button>
+				    		</form>
+					  	</div>
+				  	</div>
 			  	</div>
 			</div>
 
