--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,7 @@
 					  	<div class="modal-footer">
 					    	<form action="/fetchresult" method="post">
 					    		<input id="childpid" name="childpid" type="hidden" value="" />
+					    		<input id="method" name="method" type="hidden" value="sync" />
 					    		<button id="cancelbutton" class="btn" style="display: none" type="button">Cancel</button>
 					    		<button id="downloadbutton" style="display: none" type="submit" class="btn">Download</button>
 				    		</form>
