Fix WordNet performance issue by including it in the java library, fix server issues with downloading files

--- a/client/index.html
+++ b/client/index.html
@@ -110,6 +110,7 @@
 			});
 
 			$('#cancelbutton').click(function(){
+				console.log("canceled!");
 				$("#progressModal").modal("hide");
 				$("#downloadbutton").hide();
 				$("#cancelbutton").hide();
