Separate folders for postprocessors and formatters, postprocessing step done after matcher instead of during the matching, added sceneparser, made some corrections in the ground truth, changed the structure of the quotes and subtitle xml files and added scenes and paragraphs to the one of GoT, small improvements for the defaultmatcher

--- a/client/evaluate.html
+++ b/client/evaluate.html
@@ -86,9 +86,9 @@
 					data: {"childpid":pid, "method":"eval"},
 					url: "/fetchresult",
 					success: function( response ) {
-						console.log(response);
 						// Remove the interval once the results have been returned
 						if (response !== "Please wait..."){
+							console.log(intervalid+" cancelled");
 							clearInterval(intervalid);
 						}
 						$("#evaluationpanelbody").html(response);
