Add offline version of jQuery, new way of parsing sentences includes merging them when appropriate, new ground truth adapted to that new way of parsing, added new type of matches multimatches which represent multiple matches close to each other which are hard to view seperately because multiple sentences have the same words, new structure for the Java modules (they are now more standardised and less file writing is involved), removed merging from the default matcher (it is now a functionality of the parser, which makes it more accurate)

--- a/client/evaluate.html
+++ b/client/evaluate.html
@@ -7,7 +7,7 @@
     	<link href="css/bootstrap.min.css" rel="stylesheet">
     	<!-- Main css -->
     	<link href="css/main.css" rel="stylesheet">
-    	<script src="http://code.jquery.com/jquery.js"></script>
+    	<script src="js/jquery-2.1.1.min.js"></script>
     	<script> 
 			$(function(){
 				$("#header").load("header.html",function() {
@@ -91,6 +91,12 @@
 							clearInterval(intervalid);
 						}
 						$("#evaluationpanelbody").html(response);
+					},
+					error: function( error ) {
+						if (intervalid !== -1){
+							clearInterval(intervalid);
+							$("#evaluationpanelbody").html("Connection error");
+						}
 					}
 			    });
 			};
