--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     	<link href="css/bootstrap.min.css" rel="stylesheet">
     	<!-- Main css -->
     	<link href="css/main.css" rel="stylesheet">
-    	<script src="http://code.jquery.com/jquery.js"></script>
+    	<script src="js/jquery-2.1.1.min.js"></script>
     	<script> 
 			$(function(){
 				$("#header").load("header.html",function() {
@@ -144,6 +144,9 @@
 						$("#cancelbutton").show();
 						// Update the progress each second starting when the upload is finished
 						intervalid = setInterval(function(){checkProgress()},1000);
+					},
+					error: function( error ){
+						$("#progressmessage").text("Connection error, try again...");
 					},
 					// Ignore the content of the POST
 			        contentType: false,
